--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,41 @@
 {
      "files.associations": {
-          "string": "cpp",
           "array": "cpp",
           "atomic": "cpp",
+          "hash_map": "cpp",
+          "hash_set": "cpp",
           "*.tcc": "cpp",
           "cctype": "cpp",
+          "chrono": "cpp",
           "clocale": "cpp",
           "cmath": "cpp",
+          "condition_variable": "cpp",
           "cstdarg": "cpp",
           "cstddef": "cpp",
           "cstdint": "cpp",
           "cstdio": "cpp",
           "cstdlib": "cpp",
+          "cstring": "cpp",
+          "ctime": "cpp",
           "cwchar": "cpp",
           "cwctype": "cpp",
           "deque": "cpp",
           "unordered_map": "cpp",
+          "unordered_set": "cpp",
           "vector": "cpp",
           "exception": "cpp",
           "algorithm": "cpp",
+          "functional": "cpp",
+          "iterator": "cpp",
+          "map": "cpp",
           "memory": "cpp",
           "memory_resource": "cpp",
+          "numeric": "cpp",
           "optional": "cpp",
+          "random": "cpp",
+          "ratio": "cpp",
+          "set": "cpp",
+          "string": "cpp",
           "string_view": "cpp",
           "system_error": "cpp",
           "tuple": "cpp",
@@ -30,13 +44,18 @@
           "fstream": "cpp",
           "initializer_list": "cpp",
           "iosfwd": "cpp",
+          "iostream": "cpp",
           "istream": "cpp",
           "limits": "cpp",
+          "mutex": "cpp",
           "new": "cpp",
           "ostream": "cpp",
           "sstream": "cpp",
           "stdexcept": "cpp",
           "streambuf": "cpp",
-          "typeinfo": "cpp"
+          "thread": "cpp",
+          "cinttypes": "cpp",
+          "typeinfo": "cpp",
+          "*.inc": "cpp"
      }
 }
