--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
 aux_source_directory(. SRC_LIST)
-add_library(wrpc SHARED ${SRC_LIST})
+add_library(wrpc ${SRC_LIST})
+target_link_libraries(wrpc muduo_net muduo_base pthread )
