--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 aux_source_directory(. SRC_LIST)
 add_library(wrpc ${SRC_LIST})
-target_link_libraries(wrpc muduo_net muduo_base pthread )
+target_link_libraries(wrpc muduo_net muduo_base pthread /usr/local/lib/libzookeeper_st.so)
